--- a/src/App.css
+++ b/src/App.css
@@ -79,11 +79,11 @@
 @keyframes slideInFromBottom {
   0% {
     transform: translateY(40px); /* subtle shift from bottom */
-    /* opacity: 0.5; */
+    opacity: 1;
   }
   100% {
     transform: translateY(0);
-    /* opacity: 0.5; */
+    opacity: 1;
   }
 }
 
